cmake_minimum_required(VERSION 3.4.1)



include_directories(src/main/cpp/lame)

aux_source_directory(src/main/cpp/lame SRC_LIST)


add_library( # Sets the name of the library.
             native-lib

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             src/main/cpp/native-lib.cpp
             src/main/cpp/NativeMp3Encoder.cpp
             ${SRC_LIST})

find_library( # Sets the name of the path variable.
              log-lib

              # Specifies the name of the NDK library that
              # you want CMake to locate.
              log )

target_link_libraries( # Specifies the target library.
                       native-lib

                       # Links the target library to the log library
                       # included in the NDK.
                       ${log-lib} )